# llm-factory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
src/: main.py
src/llm_maker/: __init__.py  base_llm.py  llms.py
tests/: test_base_llm.py  test_configuration.py  test_llms.py
